--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="canonical" href="https://spookyswap.example.com/">
 
   <!-- Use your provided logo file as favicon (keep filename exactly as your asset) -->
-  <link rel="icon" href="spooky.logo" type="image/png">
+  <link rel="icon" href="spookyswap (15).png" type="image/png">
 
   <!-- Open Graph -->
   <meta property="og:type" content="article">
@@ -328,7 +328,7 @@
 
     <!-- Top hero image: use your provided filename -->
     <div class="hero-media" aria-hidden="true">
-      <img class="hero-img" src="spookyswap (15)" alt="SpookySwap interface preview">
+      <img class="hero-img" src="spookyswap (15).png" alt="SpookySwap interface preview">
     </div>
   </div>
 </header>
@@ -409,7 +409,7 @@
 
     <!-- Second image: must be under text, not on the right -->
     <div class="content-media">
-      <img class="content-img" src="spscreen" alt="SpookySwap screen: swap/liquidity/farms overview">
+      <img class="content-img" src="spsceren.png" alt="SpookySwap screen: swap/liquidity/farms overview">
     </div>
 
     <div class="note" style="margin-top:1rem;">
