--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@
       </div>
 
       <div>
-        <a href="https://spooky.fi/" class="cta" target="_blank" rel="noopener nofollow" aria-label="Open SpookySwap">Open SpookySwap</a>
-        <a href="https://docs.spooky.fi/" class="cta secondary" target="_blank" rel="noopener nofollow" aria-label="SpookySwap Docs">SpookySwap Docs</a>
+        <a href=" class="cta" target="_blank" rel="noopener nofollow" aria-label="Open SpookySwap">Open SpookySwap</a>
+        <a href="" class="cta secondary" target="_blank" rel="noopener nofollow" aria-label="SpookySwap Docs">SpookySwap Docs</a>
       </div>
 
       <div class="note" style="margin-top:1rem;">
@@ -748,9 +748,9 @@
 
     <h3>SpookySwap official ecosystem</h3>
     <ul>
-      <li><a href="https://spooky.fi/" target="_blank" rel="noopener nofollow">SpookySwap — Official Site (Spooky.fi)</a></li>
-      <li><a href="https://v3.spooky.fi/#/" target="_blank" rel="noopener nofollow">SpookySwap — V3 App</a></li>
-      <li><a href="https://docs.spooky.fi/" target="_blank" rel="noopener nofollow">SpookySwap — Documentation</a></li>
+      <li><a href="" target="_blank" rel="noopener nofollow">SpookySwap — Official Site</a></li>
+      <li><a href="" target="_blank" rel="noopener nofollow">SpookySwap — V3 App</a></li>
+      <li><a href="" target="_blank" rel="noopener nofollow">SpookySwap — Documentation</a></li>
       <li><a href="https://github.com/SpookySwap" target="_blank" rel="noopener nofollow">SpookySwap — GitHub</a></li>
     </ul>
 
